--- a/Apex-Testing/ClassTriggerTest.cls
+++ b/Apex-Testing/ClassTriggerTest.cls
@@ -37,10 +37,10 @@ public class ClassTriggerTest {
         // Then
         System.assertEquals(0,[SELECT Count() FROM Class__c]);
     }
-    // Test method to delete the related students when class Custom Status updated to Reset
-    @IsTest static void testDeleteRelatedStudentsWhenReset(){
+    // Positive Test method to delete the related students when class Custom Status updated to Reset
+    @IsTest static void positiveTestDeleteRelatedStudentsWhenReset(){
         // Given
-        Class__c classRecord = new Class__c(Board__c = 'Bihar',Fee__c = 1000, MaxSize__c = 10,Custom_Status__c = 'Open');
+        Class__c classRecord = new Class__c(Board__c = 'Bihar',Fee__c = 1000, MaxSize__c = 10);
         insert classRecord;
         List<Student__c> studentList = new List<Student__c>();
         for(Integer i = 0; i < 4; i++){
@@ -48,8 +48,6 @@ public class ClassTriggerTest {
             studentList.add(studentData);
         }
         insert studentList;
-        // Test when the Custom Status field in class is Open
-        System.assertEquals(4, [SELECT Count() FROM Student__c WHERE Class__c = : classRecord.Id]);
         // When 
         classRecord.Custom_Status__c = 'Reset';
         update classRecord;
@@ -57,5 +55,24 @@ public class ClassTriggerTest {
         // Test when the Custom Status field in class is Reset
         System.assertEquals(0, [SELECT Count() FROM Student__c WHERE Class__c = : classRecord.Id]);
     }
+    // Negative Test method to delete the related students when class Custom Status updated to Reset
+    @IsTest static void negativeTestDeleteRelatedStudentsWhenReset(){
+        // Given
+        Class__c classRecord = new Class__c(Board__c = 'Bihar',Fee__c = 1000, MaxSize__c = 10);
+        insert classRecord;
+        List<Student__c> studentList = new List<Student__c>();
+        for(Integer i = 0; i < 4; i++){
+            Student__c studentData = new Student__c(First_Name__c = 'Test Name '+ i, LastName__c = 'LastName' + i, Sex__c = 'Male',Class__c = classRecord.Id);
+            studentList.add(studentData);
+        }
+        insert studentList;
+        // When 
+        classRecord.Custom_Status__c = 'Open';
+        update classRecord;
+        // Then
+        // Test when the Custom Status field in class is Reset
+        System.assertEquals(4, [SELECT Count() FROM Student__c WHERE Class__c = : classRecord.Id]);
+    }
+
     
 }
